# pivss

./: .dockerignore  .env.example  .gitignore  COMPARISON.md  Cargo.toml  Dockerfile  README.md  config.docker.toml  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
blog/: blog-post-VA-incentivized-backup-lightning-rgb.md  blog-post-VT-incentivized-backup-lightning-rgb.md
crates/pivss-client/: Cargo.toml
crates/pivss-client/src/: discover.rs  lib.rs  main.rs
crates/pivss-client/tests/: e2e.rs
crates/pivss-core/: Cargo.toml
crates/pivss-core/src/: crypto.rs  lib.rs  manifest.rs  nostr.rs  proof.rs  proto.rs  torrent.rs
crates/pivss-ln/: Cargo.toml
crates/pivss-ln/src/: lib.rs
crates/pivss-server/: Cargo.toml
crates/pivss-server/src/: announce.rs  api.rs  config.rs  lib.rs  ln.rs  main.rs  seeder.rs  state.rs  store.rs
crates/pivss-server/web/: app.html  panel.html
docs/: index.html
examples/: test-backup.json
video/: capture.js  package.json
