[workspace]
resolver = "2"
members = [
    "crates/pivss-core",
    "crates/pivss-ln",
    "crates/pivss-server",
    "crates/pivss-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidoswap/pivss"

[workspace.dependencies]
pivss-core = { path = "crates/pivss-core" }
pivss-ln = { path = "crates/pivss-ln" }
breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", tag = "0.12.4" }
async-trait = "0.1"

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
prost = "0.13"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
bech32 = "0.11"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dotenvy = "0.15"

# Required by breez-sdk-liquid (Liquid confidential-transaction crypto).
[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/breez/rust-secp256k1-zkp.git", rev = "eac2e479255a6e32b5588bc25ee53c642fdd8395" }
