[package]
name = "pivss-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
sha1.workspace = true
sha2.workspace = true
prost.workspace = true
secp256k1.workspace = true
bech32.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
