[package]
name = "pivss-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pivss_server"
path = "src/lib.rs"

[[bin]]
name = "pivss-server"
path = "src/main.rs"

[dependencies]
pivss-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
sha2.workspace = true
prost.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
async-trait = "0.1"
